[workspace]
members = [".", "deno-cm", "sqlite-cm"]

[package]
name = "moon_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.35", features = ["sync", "time"] }
error-stack = "0.5"
json = "0.12.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.8", features = ["v4", "js"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.35", features = ["full"] }
